fixing primary components

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>a</h1>
-    <a href="./login.html">njir</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Median - Social Publishing Platform</title>
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body style="height: 100vh">
+    <header>
+      <div class="header-container">
+        <img src="./assets/Logo-hijau.png" alt="" />
+        <button onclick="login()">Login</button>
+      </div>
+    </header>
+    <main>
+      <div class="main-container">
+        <div class="desc">
+          <div class="content-head">
+            <p>SOCIAL PUBLIC PLATFORM</p>
+          </div>
+          <div class="content-title">
+            <h5>Median</h5>
+          </div>
+          <div class="content-desc">
+            <p>
+              Median adalah platform penerbitan sosial berbasis web yang
+              bertujuan untuk menjadi pusat ide-ide bagus. Dengan desain yang
+              sederhana, platform ini menawarkan ruang bagi penulis dan pembaca
+              untuk terhubung dan berbagi pemikiran tentang berbagai topik. Dari
+              esai pribadi hingga artikel berita, Median menyediakan platform
+              bagi siapa saja yang ingin mengekspresikan diri dan terlibat
+              dengan orang lain. Median menawarkan pengalaman membaca yang unik
+              dan menarik. Median menawarkan sesuatu untuk semua orang, baik
+              seorang penulis yang ingin berbagi ide atau pembaca yang mencari
+              konten yang berwawasan dan menarik.
+            </p>
+          </div>
+        </div>
+        <div class="iphone-image">
+          <img src="./assets/iPhone 12 Pro.png" alt="iphone" />
+        </div>
+      </div>
+    </main>
+    <script>
+      function login() {
+        window.location.href = "login.html";
+      }
+    </script>
+  </body>
 </html>
