--- a/login.html
+++ b/login.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Login Page</title>
-</head>
-<body>
-  <div class="container-login">
-    <div class="median-logo">
-      <img src="./assets/Logo.png" alt="logo">
-      <img src="./assets/Illustration.png" alt="hero">
-    </div>
-    <div class="container-form">
-      <div class="login-form">
-        <div class="login-text">
-          <h3>Login</h3>
-          <p>Selamat datang kembali</p>
-        </div>
-        <form>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Masukkan Email" required>
-            <label for="password">Kata Sandi</label>
-            <input type="password" id="password" name="password" placeholder="Masukkan Kata Sandi" required>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Login Page</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container-login">
+      <div class="median-logo">
+        <img src="./assets/Logo.png" alt="logo" />
+        <img src="./assets/Illustration.png" alt="hero" />
+      </div>
+      <div class="container-form">
+        <div class="login-form">
+          <div class="login-text">
+            <h3>Login</h3>
+            <p>Selamat datang kembali</p>
           </div>
-          <div class="button-register-reset">
-            <button type="button" class="register">
-              Belum Punya Akun? <span>Register</span>
+          <form>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Masukkan Email"
+                required
+              />
+              <label for="password">Kata Sandi</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Masukkan Kata Sandi"
+                required
+              />
+            </div>
+            <div class="button-register-reset">
+              <button type="button" class="register">
+                Belum Punya Akun? <span>Register</span>
+              </button>
+              <button type="button" class="forget-password">
+                Lupa Password?
+              </button>
+            </div>
+            <button class="button-login" type="submit" onclick="login()">
+              Login
             </button>
-            <button type="button" class="forget-password">Lupa Password?</button>
-          </div>
-          <button class="button-login" type="submit" onclick="login()">Login</button>
-        </form>
-        <p class="or">atau</p>
-        <button class="google-login-button">
-          <img src="./assets/google.png" alt="Google Icon" class="google-icon">
-          Login dengan Google
-        </button>
-      </div>
-      <div class="copyright">
-        <p>© 2024 PT. Median. All Rights Reserved</p>
+          </form>
+          <p class="or">atau</p>
+          <button class="google-login-button">
+            <img
+              src="./assets/google.png"
+              alt="Google Icon"
+              class="google-icon"
+            />
+            Login dengan Google
+          </button>
+        </div>
+        <div class="copyright">
+          <p>© 2024 PT. Median. All Rights Reserved</p>
+        </div>
       </div>
     </div>
-  </div>
-  <script>
-    function login() {
-        window.location.href = 'main.html';
-    }
-</script>
-</body>
+    <script>
+      function login() {
+        window.location.href = "main.html";
+      }
+    </script>
+  </body>
 </html>
