slicing header main page

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <header>
       <div class="header-main-container">
         <div class="logo-search">
-          <img src="./assets/Logo-hijau.png" alt="logo" />
+          <img src="./assets/Logo-hijau.png" alt="logo" class="main-logo" />
           <div class="input-container">
             <img src="./assets/Star.png" alt="star icon" class="star-icon" />
             <input
@@ -27,17 +27,15 @@
             />
           </div>
         </div>
-        <div class="login-user">
-          <div class="star-icon"></div>
-          <div class="button-login">
-            <button>Login</button>
-          </div>
+        <nav class="login-user">
+          <img src="./assets/Star.png" alt="star icon" class="star-icon-login" />
+          <button class="button-login-main">Login</button>
           <div class="profile">
-            <img src="./assets/Ellipse 395.png" alt="user" />
+            <img src="./assets/Ellipse 395.png" alt="user" class="user-image"/>
             <p>Chance Vaccaro</p>
-            <img src="./assets/Star.png" alt="star" />
+            <img src="./assets/Star.png" alt="star" class="star-icon-login"/>
           </div>
-        </div>
+        </nav>
       </div>
     </header>
     <main>
