slicing news main page

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Median - Social Publishing Platform</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -28,18 +28,170 @@
           </div>
         </div>
         <nav class="login-user">
-          <img src="./assets/Star.png" alt="star icon" class="star-icon-login" />
+          <img
+            src="./assets/Star.png"
+            alt="star icon"
+            class="star-icon-login"
+          />
           <button class="button-login-main">Login</button>
           <div class="profile">
-            <img src="./assets/Ellipse 395.png" alt="user" class="user-image"/>
+            <img src="./assets/Ellipse 395.png" alt="user" class="user-image" />
             <p>Chance Vaccaro</p>
-            <img src="./assets/Star.png" alt="star" class="star-icon-login"/>
+            <img src="./assets/Star.png" alt="star" class="star-icon-login" />
           </div>
         </nav>
       </div>
     </header>
     <main>
-      <h1>a</h1>
+      <div class="main-container-bacaan">
+        <section class="container-bacaan">
+          <h4>Semua Bacaan</h4>
+          <nav class="topic">
+            <div class="topic-category">
+              <button>Teknologi</button>
+              <button>Media</button>
+              <button>Pengembangan Diri</button>
+              <button>Desain</button>
+              <button>Budaya</button>
+              <button>Dunia</button>
+              <button>Pendidikan</button>
+            </div>
+            <button class="all-topic">Lihat Semua Topik</button>
+          </nav>
+        </section>
+        <aside class="container-popular">
+          <h4>Bacaan Populer</h4>
+        </aside>
+      </div>
+      <article class="all-news">
+        <div class="news-one">
+          <img src="./assets/news/news1.png" alt="news-image" class="news-image" />
+          <section class="news-content">
+            <div class="news-date">
+              <p>09 Jun 2023</p>
+            </div>
+            <div class="news-title">
+              <p>
+                Internet of Things (IoT) dan Masa Depan Keterhubungan dalam
+                Kehidupan Sehari-hari.
+              </p>
+            </div>
+            <div class="news-publisher">
+              <img src="./assets/publisher/news1.png" alt="publisher" class="publisher-image" />
+              <p>Kristin Watson</p>
+            </div>
+            <div class="news-mark">
+              <button>Media</button>
+              <i class="fa-regular fa-bookmark"></i>
+            </div>
+          </section>
+        </div>
+        <div class="news-two">
+          <img src="./assets/news/news2.png" alt="news-image" class="news-image" />
+          <section class="news-content">
+            <div class="news-date">
+              <p>09 Jun 2023</p>
+            </div>
+            <div class="news-title">
+              <p>
+                Mengembangkan Keterampilan Berpikir Kritis melalui Pendidikan: Strategi dan Implementasi di Kelas.
+              </p>
+            </div>
+            <div class="news-publisher">
+              <img src="./assets/publisher/news2.png" alt="publisher" class="publisher-image" />
+              <p>Cameron Williamson</p>
+            </div>
+            <div class="news-mark">
+              <button>Media</button>
+              <i class="fa-regular fa-bookmark"></i>
+            </div>
+          </section>
+        </div>
+        <div class="news-three">
+          <img src="./assets/news/news3.png" alt="news-image" class="news-image" />
+          <section class="news-content">
+            <div class="news-date">
+              <p>15 Agu 2023</p>
+            </div>
+            <div class="news-title">
+              <p>
+                Inovasi Teknologi Big Data: Menggali Wawasan dan Mendukung Pengambilan Keputusan yang Efektif.
+              </p>
+            </div>
+            <div class="news-publisher">
+              <img src="./assets/publisher/news3.png" alt="publisher" class="publisher-image" />
+              <p>Arlene McCoy</p>
+            </div>
+            <div class="news-mark">
+              <button>Media</button>
+              <i class="fa-regular fa-bookmark"></i>
+            </div>
+          </section>
+        </div>
+        <div class="news-four">
+          <img src="./assets/news/news4.png" alt="news-image" class="news-image" />
+          <section class="news-content">
+            <div class="news-date">
+              <p>27 Mar 2023</p>
+            </div>
+            <div class="news-title">
+              <p>
+                Desain Interior Ramah Lingkungan: Pendekatan Green Design dalam Menciptakan Ruang yang Berkelanjutan.
+              </p>
+            </div>
+            <div class="news-publisher">
+              <img src="./assets/publisher/news4.png" alt="publisher" class="publisher-image" />
+              <p>Chance Vaccaro</p>
+            </div>
+            <div class="news-mark">
+              <button>Media</button>
+              <i class="fa-regular fa-bookmark"></i>
+            </div>
+          </section>
+        </div>
+        <div class="news-five">
+          <img src="./assets/news/news1.png" alt="news-image" class="news-image" />
+          <section class="news-content">
+            <div class="news-date">
+              <p>23 Jan 2023</p>
+            </div>
+            <div class="news-title">
+              <p>
+                Pendidikan Karakter: Membangun Nilai-Nilai Etika dan Moral pada Anak-anak.
+              </p>
+            </div>
+            <div class="news-publisher">
+              <img src="./assets/publisher/news1.png" alt="publisher" class="publisher-image" />
+              <p>Darrell Steward</p>
+            </div>
+            <div class="news-mark">
+              <button>Media</button>
+              <i class="fa-regular fa-bookmark"></i>
+            </div>
+          </section>
+        </div>
+        <div class="news-six">
+          <img src="./assets/news/news6.png" alt="news-image" class="news-image" />
+          <section class="news-content">
+            <div class="news-date">
+              <p>13 Apr 2023</p>
+            </div>
+            <div class="news-title">
+              <p>
+                Peran Penting Kepercayaan Diri dalam Pengembangan Pribadi dan Profesional.
+              </p>
+            </div>
+            <div class="news-publisher">
+              <img src="./assets/publisher/news6.png" alt="publisher" class="publisher-image" />
+              <p>Savannah Nguyen</p>
+            </div>
+            <div class="news-mark">
+              <button>Media</button>
+              <i class="fa-regular fa-bookmark"></i>
+            </div>
+          </section>
+        </div>
+      </article>
     </main>
   </body>
 </html>
