slicing article popular main page

--- a/main.html
+++ b/main.html
@@ -60,7 +60,100 @@
           </nav>
         </section>
         <aside class="container-popular">
-          <h4>Bacaan Populer</h4>
+          <section class="popular-article">
+            <h4>Bacaan Populer</h4>
+            <div class="popular-article-frame">
+              <section class="article-one">
+                <div class="article-content">
+                  <div class="article-tag">
+                    <div class="article-tag-number">
+                      <p>#1</p>
+                    </div>
+                    <div class="article-date">
+                      <p>27 Feb 2023</p>
+                    </div>
+                  </div>
+                  <div class="article-title">
+                    <p>
+                      Mendekati AI yang Mampu Belajar Sendiri: Pengembangan Algoritma Pembelajaran Mesin yang Efektif.
+                    </p>
+                  </div>
+                  <div class="article-publisher">
+                    <img src="./assets/publisher/article1.png" alt="publisher">
+                    <p>Rochel Foose</p>
+                  </div>
+                </div>
+              </section>
+              <section class="article-two">
+                <div class="article-content">
+                  <div class="article-tag">
+                    <div class="article-tag-number">
+                      <p>#2</p>
+                    </div>
+                    <div class="article-date">
+                      <p>16 Des 2022</p>
+                    </div>
+                  </div>
+                  <div class="article-title">
+                    <p>
+                      Perkembangan Terbaru dalam Teknologi 5G: Masa Depan Koneksi Internet yang Lebih Cepat dan Andal.
+                    </p>
+                  </div>
+                  <div class="article-publisher">
+                    <img src="./assets/publisher/article2.png" alt="publisher">
+                    <p>Wade Warren</p>
+                  </div>
+                </div>
+              </section>
+              <section class="article-three">
+                <div class="article-content">
+                  <div class="article-tag">
+                    <div class="article-tag-number">
+                      <p>#3</p>
+                    </div>
+                    <div class="article-date">
+                      <p>05 Jan 2023</p>
+                    </div>
+                  </div>
+                  <div class="article-title">
+                    <p>
+                      Dampak Stres pada Kesehatan Mental dan Strategi Mengelolanya dalam Kehidupan Sehari-hari.
+                    </p>
+                  </div>
+                  <div class="article-publisher">
+                    <img src="./assets/publisher/article3.png" alt="publisher">
+                    <p>Eduardo</p>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </section>
+          <section class="recommend">
+            <h4>Rekomendasi Penulis</h4>
+            <section class="publisher-recommendation">
+              <section class="publisher-one">
+                <div class="publisher-profile">
+                  <img src="./assets/publisher/recommend1.png" alt="publisher">
+                  <p>Aurellio</p>
+                </div>
+                <button class="button-profile-publisher">Lihat Profile</button>
+              </section>
+              <section class="publisher-two">
+                <div class="publisher-profile">
+                  <img src="./assets/publisher/recommend2.png" alt="publisher">
+                  <p>Max</p>
+                </div>
+                <button class="button-profile-publisher">Lihat Profile</button>
+              </section>
+              <section class="publisher-three">
+                <div class="publisher-profile">
+                  <img src="./assets/publisher/recommend3.png" alt="publisher">
+                  <p>Theresa Webb</p>
+                </div>
+                <button class="button-profile-publisher">Lihat Profile</button>
+              </section>
+            </section>
+          </section>
         </aside>
       </div>
       <article class="all-news">
@@ -192,6 +285,9 @@
           </section>
         </div>
       </article>
+      <footer>
+        <p>© 2024 PT. Median. All Rights Reserved</p>
+      </footer>
     </main>
   </body>
 </html>
