--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Median - Social Publishing Platform</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./assets/Icon.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -33,7 +34,7 @@
             alt="star icon"
             class="star-icon-login"
           />
-          <button class="button-login-main">Login</button>
+          <button class="button-login-main">Profile</button>
           <div class="profile">
             <img src="./assets/Ellipse 395.png" alt="user" class="user-image" />
             <p>Chance Vaccaro</p>
