change name user

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
           <button class="button-login-main">Profile</button>
           <div class="profile">
             <img src="./assets/Ellipse 395.png" alt="user" class="user-image" />
-            <p>Chance Vaccaro</p>
+            <p>Noer Rohim</p>
             <img src="./assets/Star.png" alt="star" class="star-icon-login" />
           </div>
         </nav>
